--- a/SimplyTotalCommander/MainWindow.xaml
+++ b/SimplyTotalCommander/MainWindow.xaml
@@ -17,7 +17,7 @@
         </Grid.ColumnDefinitions>
             <local:WindowControl
             Grid.Column="0"
-            Margin="0,0,-125.2,0"/>
+            Margin="0,0,-125.2,0" Loaded="WindowControl_Loaded"/>
         <GridSplitter
             Grid.Column="1"
             Background="Blue" 
