Size format & item listener
Fix file size format
Add listviewer item listener

--- a/SimplyTotalCommander/WindowControl.xaml
+++ b/SimplyTotalCommander/WindowControl.xaml
@@ -57,6 +57,23 @@
                   SelectionChanged="DataGridOfDirectories_SelectionChanged"
                   HorizontalAlignment="Center"
                   >
+            <!-- Dodane przez Hutnika -->
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown" />
+                </Style>
+            </ListView.ItemContainerStyle>
+            <!-- Dodane przez Hutnika -->
         </ListView>
+        <ItemsControl x:Name="DirectoriesTree">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <WrapPanel>
+                        <Button Content="{Binding}" Click="DirectoryButton"></Button>
+                        <Button x:Name="hiddenButton" Visibility="Hidden"></Button>
+                    </WrapPanel>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </UniformGrid>
 </UserControl>
