--- a/SimplyTotalCommander/WindowControl.xaml
+++ b/SimplyTotalCommander/WindowControl.xaml
@@ -3,15 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SimplyTotalCommander"
              mc:Ignorable="d" 
              d:DesignHeight="450"
              d:DesignWidth="800"
-             Loaded="Window_Loaded">
+             Loaded="Window_Loaded"
+             >
+
+
     <Viewbox HorizontalAlignment="Left" StretchDirection="UpOnly">
         <DockPanel>
             <!-- *** Showing direcroies tree *** -->
             <ListView x:Name="ListOfDirectory"
+                      Foreground="Coral"
+                      FontFamily="Fonts/Rex/Rex-Bold.ttf"
                       Width="150"
                       Height="700"
                   SelectionChanged="DataGridOfDirectories_SelectionChanged">
@@ -23,6 +27,7 @@
             </ListView>
             <!-- *** Showing table with details of files from list *** -->
             <DataGrid x:Name="DataGridOfFiles"
+                      AlternatingRowBackground="LemonChiffon"
                   IsReadOnly="True"
                   DockPanel.Dock="Top"
                   HorizontalAlignment="Stretch"
